# backend

./: .dockerinit.sh  .environment.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build_docker.yml  deploy_prod.yml
api/v1/: urls.py
api/v1/endoprosthetics/: urls.py
api/v1/endoprosthetics/serializers/: endoprosthetics.py  endoprosthetics_form.py  (+2 more)
api/v1/treatments/: urls.py
api/v1/users/: urls.py
apps/admins/: apps.py  models.py
apps/admins/forms/: users.py
apps/endoprosthetics/: apps.py
apps/endoprosthetics/migrations/: 0001_initial.py
apps/endoprosthetics/models/: __init__.py  endoprosthetics.py  endoprosthetics_form.py  endoprosthetics_type.py  endoprosthetics_vendor.py
apps/treatments/migrations/: 0001_initial.py  0002_remove_treatmentoutcome_follow_up_period_and_more.py  0003_analysisdata_comorbidpathology_microflora.py
apps/treatments/models/: __init__.py  analysis_data.py  arthroplasty_form.py  comobrid_pathologies.py  microflora.py  operation_stage.py  patient.py  surgical_intervention.py  treatment.py  treatment_outcome.py
apps/users/: models.py
apps/users/actions/: password_reset.py  send_reset_password_form.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/: create_user_email.html  password_reset_email.html
elizarov/: asgi.py  settings.py  urls.py  wsgi.py
utils/actions/: abstract.py  exceptions.py  typing.py
utils/actions/controllers/: view.py
(+30 files in other folders)
